-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.782 2010-08-18 21:58:29 jluis Exp $
-----------------------------------------------------------------------------------------

2010-08-18	jluis
	* ps2rasrter.c:		Added missing on-line description of -C option.

2010-08-17	pwessel
	* GMT_App_F.sh:		Missed two slots that should be shaded in Standard+
	* misc/gmt2kml.c:	Only append running number when a segment has more than
				one point, else just use segment label.

2010-08-03	pwessel
	* gmt_plot.c:		Bug in fault symbol psxy -Sfrc, fixed w/ thanx to J. Robert

2010-07-28	pwessel
	* spotter/rotconverter.c:	Complained of "bad option" when a rotation with a
				negative longitude was given on the command line, e.g. -135/35/-2.5
				Would sometimes issues a rotation twice (same time)
		
2010-07-27	pwessel
	* spotter/backtracker.c:	Added the -F option to compute predicted hotspot tracks
				given a hotspot motion record and plate rotations.

2010-07-26	pwessel
	* mgd77/mgd77manage.c:	The -F option had no break statement.
	* mgd77/mgd77track.c:	Had inactive code to write segmentheader to output.
	* spotter/libspotter.c:	Ignore total reconstruction rotations with zero angle

2010-07-24	pwessel
	* mgd77/mgd77list.c:	The -G option was not listed in synopsis or usage, only
				in the man pages.  Also -Fall+ and -Fmgd77+ did not append
				the auxiliary columns properly.
	* mgd77/mgd77magref.c:	The -D failed on numeric arguments.

2010-07-22	pwessel
	* psimage.c:		justify text string must be 3-char longs to hold trailing 0.
				This could case SEGV on some systems.

2010-07-18	remko
	* pstext.txt:		Added missing description of -A option.
	* configure.ac:		Updated to 4.5.4

2010-07-16	pwessel
	* ex23/*:		The scripts plotted names at a 1-degree angle instead of 0.

2010-07-16	pwessel
	* spotter/*.c:		Now convert geodetic to geocentric latitudes before doing
				spherical rotations; recover geodetic for output points.
